...
  6: "Meeting/banquet facilities",
  7: "Bar",
  8: "24-hour front desk",
  9: "Tennis court",
  10: "Sauna",
  11: "Fitness center",
  12: "Golf course",
  14: "Garden",
  15: "Terrace",
  16: "Non-smoking rooms",
  17: "Airport shuttle",
  19: "Fishing",
  20: "Business center",
  21: "Babysitting/child services",
  22: "Laundry",
  23: "Dry cleaning",
  24: "Continental breakfast",
  25: "Facilities for disabled guests",
...
  64: "Soundproof rooms",
  69: "Canoeing",
  70: "Hiking",
  71: "Chapel/shrine",
  72: "BBQ facilities",
  73: "Packed lunches",
  75: "Car hire",
  76: "Cycling",
  77: "Bowling",
  78: "Tour desk",
  79: "Hammam",
  80: "Heating",
  81: "Fax/photocopying",
...
